<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task.main.MainActivity">

    <TextView
        android:id="@+id/txt_test_data"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/layout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:alignItems="center"
        app:flexWrap="wrap"
        app:justifyContent="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_authentication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_authentication" />

        <Button
            android:id="@+id/btn_analytics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/btn_analytics" />

        <Button
            android:id="@+id/btn_remote_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_remote_config" />

        <Button
            android:id="@+id/btn_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_test" />

        <Button
            android:id="@+id/btn_crash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_crash" />

        <Button
            android:id="@+id/btn_exception"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_exception" />

        <Button
            android:id="@+id/btn_thinking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_thinking" />
    </com.google.android.flexbox.FlexboxLayout>
</android.support.constraint.ConstraintLayout>